<resources>
    <string name="app_name">Okhome</string>
    <string name="action_settings">Settings</string>
    <string name="toLogin">Login</string>
    <string name="toLogOut">Log Out</string>
    <string name="toOrder">Order</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_appId">Insert Email ID</string>
    <string name="text_appPassword">Insert Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="text_signup_email">Insert Email</string>
    <string name="text_signup_password">Insert Password</string>
    <string name="text_signup_passwordRe">Please Insert Password Again</string>
    <string name="btn_register">Register</string>
    <string name="upcoming_order">UPCOMING ORDER</string>
    <string name="current_balance">YOUR CURRENT BALANCE</string>
    <string name="newOrder">NEW"\n"ORDER</string>
    <string name="changeOrder">CHANGE"\n"ORDER</string>
    <string name="orderHistory">ORDER"\n"HISTORY</string>
    <string name="topUp">TOP"\n"UP</string>
    <string name="customerService">CUSTOMER SERVICE</string>
    <string name="basic_options">BASIC OPTIONS</string>
    <string name="weekly_unit">Rp / week</string>
    <string name="rupia_unit">Rp</string>
    <string name="multiply_unit"> x </string>
    <string name="hour_unit">hrs</string>
    <string name="day_unit">days</string>
    <string name="auto_login">Auto Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_type">Type of your home</string>
    <string name="home_size">Size of your home (square meter)</string>
    <string name="home_existence">Will you be at home?</string>
    <string name="pet_existence">Do you have pet?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tell_us_more">TELL US MORE</string>
    <string name="detailed_info">  (sample)"\n"- I want special cleaning on refridge </string>
    <string name="use_cleaning_tools">Do you want cleaners to user your cleaning tools?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="regular_package">Regular Package</string>
    <string name="triple_package">3 Times a week</string>
    <string name="double_package">Twice a week</string>
    <string name="single_package">Once a week</string>
    <string name="regular_package_price_per_hour">100.000/hr</string>
    <string name="onetime_package">Single Package</string>
    <string name="onetime_package_price_per_hour">150.000/hr</string>
    <string name="just_this_once_package">Just for this time</string>
    <string name="weekly_charge">Weekly Charge</string>
    <string name="cleaning_package_warning">If you select the Regular Package"\n"We will visit regularly until the balance allows</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="estimated_time">Estimated Time</string>
    <string name="start_date">The Service Starts from</string>
    <string name="eight_thirty">08:30</string>
    <string name="nine_zero">09:00</string>
    <string name="fourteen_zero">14:00</string>
    <string name="fourteen_thirty">14:30</string>
    <string name="nineteen_thirty">19:30</string>
    <string name="twenty_zero">20:00</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_first_date">Choose Your Date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_address_page">ADDRESS</string>
    <string name="service_area_region">DKI Jakarta</string>
    <string name="service_area_city">South Jakarta</string>
    <string name="address_announcement1">*Sorry we currently service only in South Jakarta area"\n"
        Please let us know if you want us to expand the service area</string>
    <string name="detailed_address">Rest of Address(detail)</string>
    <string name="location_detail">Location Detail (how to get your home)</string>
    <string name="host_name">Host Name</string>
    <string name="host_phone_number">Host Phone Number</string>


    <string-array name="district_array">
        <item>KEBAYORAN BARU</item>
        <item>MAMPANG PRAPATAN</item>
        <item>SETIABUDI</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="oreder_confirm_page">POINTS</string>
    <string name="service_start_schedule">Service will starts from</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_up_page">TOP-UP</string>
    <string name="top_up_10m">10M Rp (+10% Bonus)</string>
    <string name="top_up_5m">5M Rp (+8% Bonus)</string>
    <string name="top_up_2500k">2.500K Rp (+5% Bonus)</string>
    <string name="top_up_1000k">1.000K Rp (+4% Bonus)</string>
    <string name="top_up_800k">800K Rp</string>
    <string name="okhome_bank_account">BCA Account No."\n"xxx-xxxx-xxx</string>
    <string name="okhome_bank_account_holder">Holder Name: PT OKHOME</string>
    <string name="send_transfer_info">Send to SMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="warning">WARNING</string>
    <string name="warning_contents">If you login as a guest,"\n"you can use our service"\n"without registration."\n"
        But please notice that"\n"multiple packages with bonus points"\n"only available for registered users."\n"
        You can only book single time"\n"with out any benefits"\n"as a Guest user"\n""\n"Are you sure"\n"
        you want to proceed as a Guest?</string>
    <string name="proceed_guest">Proceed"\n"as a Guest</string>
    <string name="title_activity_top_up">TopUpActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="topup_info">Top Up Info</string>
    <string name="topup_amount">Amount to transfer: 800000 Rp"\n"Sorry, guest cannot use bonus pkg.</string>
    <string name="account_holder_name">Bank Account Holder Name</string>
    <string name="user_bank_name">Name of Bank (e.g. BCA)</string>
    <string name="user_amount_transfer">Amount To Be Transferred</string>
    <string name="okhome_point_term_of_use">OKHOME"\'"s Point is neither exchangeable for"\n"
        cash nor can it be credited to any account"\n"
        OKHOME"\'"s Point can be only used within"\n"
        OKHOME Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="top_up_confirm">Top Up Confirmation</string>
    <string name="transaction_confirm">Confirming your transaction</string>
    <string name="transaction_confirm_detail">As soon as confirmation is done,"\n"
        we will let you know via SMS</string>
    <string name="transaction_thank_message">Thank you for using OKHOME</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="title_activity_order_change">OrderChangeActivity</string>


</resources>
