<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical">

    <EditText
        android:id="@+id/app_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_appId"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/app_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_appPassword"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/btn_login" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signup"
        android:text="@string/btn_signup" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chk_auto_login"
        android:text="@string/auto_login"/>

</LinearLayout>
