<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.co.okhome.okhome.TopUpPackageFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:orientation="horizontal">

            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#006782"/>
            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f8f8f8"/>
            <View
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#f8f8f8"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_up_page" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rdb_select_topup_pkg">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_top_up_10m"
                android:background="@drawable/btn_color_selector"
                android:text="@string/top_up_10m"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_top_up_5m"
                android:background="@drawable/btn_color_selector"
                android:text="@string/top_up_5m"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_top_up_2500k"
                android:background="@drawable/btn_color_selector"
                android:text="@string/top_up_2500k"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_top_up_1000k"
                android:background="@drawable/btn_color_selector"
                android:text="@string/top_up_1000k"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textAlignment="center"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_top_up_800k"
                android:background="@drawable/btn_color_selector"
                android:text="@string/top_up_800k"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okhome_bank_account"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okhome_bank_account_holder"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_send_transfer_info"
            android:text="@string/send_transfer_info"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_end_of_top_up_package"
            android:text="NEXT"
            android:textAlignment="center"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</FrameLayout>
