<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_select_day"
    tools:context="id.co.okhome.okhome.SelectDay">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_monday"
            android:text="@string/monday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_tuesday"
            android:text="@string/tuesday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_wednesday"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_thursday"
            android:text="@string/thursday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_friday"
            android:text="@string/friday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_saturday"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp" />

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sunday"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_end_of_select_day"
            android:text="NEXT"
            android:textAlignment="center"
            android:outlineProvider="bounds"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_color_selector"/>

    </LinearLayout>

</FrameLayout>
