<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="id.co.okhome.okhome.SignupActivity"
    tools:showIn="@layout/activity_signup"
    android:orientation="vertical">

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_email"
        android:singleLine="true"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signup_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_password"
        android:singleLine="true"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/signup_pwRe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_signup_passwordRe"
        android:singleLine="true"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:text="@string/btn_register" />

</LinearLayout>
