<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.co.okhome.okhome.RegisterAddressFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/fragment_register_address_top">

        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#006782"/>
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#f8f8f8"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_register_address_top"
        android:layout_above="@+id/btn_end_of_address1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_address_page" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_area_region"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service_area_city"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_announcement1"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spn_district">
            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_detailed_address"
                android:hint="@string/detailed_address"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_location_detail"
                android:hint="@string/location_detail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_host_name"
                android:hint="@string/host_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etx_host_phone_number"
                android:hint="@string/host_phone_number"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_end_of_address1"
        android:text="NEXT"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
